--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "author": "rpawel-user",
   "license": "ISC",
   "dependencies": {
-    "redis": "^3.0.2",
-    "request": "^2.88.2"
+    "redis": "^3.0.2"
   },
   "devDependencies": {
     "jest": "^26.4.0",
